# us-geographies

./: .gitignore  README  README.md  main.py  requirements.txt  setup.cfg  setup.py
aiannh/: commands.py  download.py  shapes.py
bg/: commands.py  download.py  shapes.py
cbsa/: __init__.py  cbsa_delineated.py  cbsa_shape.py  commands.py  csa_shape.py  delineation.py  download.py  shapes.py
cd/: cd_shape.py  commands.py  download.py  shapes.py
census/: commands.py  download.py  reference.py
edge/: commands.py  download.py  shapes.py
fileops/: download.py
fips/: commands.py  delineation.py  download.py  fips_allgeocodes.py  fips_state.py  fips_stategeocodes.py  shapes.py
iops/: __init__.py  database.py  download.py
metadata/: __init__.py  methods.py
metro/: commands.py  delineation.py  download.py  shapes.py
necta/: commands.py  delineation.py  download.py  necta_cities.py  necta_combined.py  necta_shape.py  shapes.py
parsers/: __init__.py  pdf.py  shapefile.py  xls.py  xlsx.py
place/: commands.py  download.py  shapes.py
puma/: commands.py  download.py  puma_shape.py  shapes.py
sd/: commands.py  download.py  shapes.py
sld/: commands.py  download.py  shapes.py
tract/: commands.py  download.py  shapes.py  tract_shape.py
ua/: commands.py  download.py  shapes.py
usgeo/: __main__.py  cmdline.py
usgeo/aiannh/: commands.py  download.py  shapes.py
usgeo/bg/: commands.py  download.py  shapes.py
usgeo/cd/: commands.py  download.py  shapes.py
usgeo/census/: commands.py  download.py  reference.py
zcta/: commands.py  download.py  shapes.py
(+31 files in other folders)
