[metadata]
name = us-geographies
version = 0.0.1
license = AGPL-3.0
long_description = file:README.md
long_description_content_type = text/markdown


[options]
packages = us-geographies
install_requires =
  openpyxl >= 3.0.9
  requests >= 2.27.1
  psycopg2 >= 2.9.3
  pyshp >= 2.2.0
  xlrd >= 2.0.1
  click >= 8.1.2
  pdfplumber >= 0.6.2
